--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,10 +2,11 @@
   {{burger_name}}
 
   <button class = "change-devour" data-id = "{{id}}" data-newdevour = "{{devour}}">
-    {{#if true}}
-      Devour
+    {{#if false}}
+      Devour it
       {{else}}
       Reorder
     {{/if}}
   </button>
 </li>
+
