--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,7 +2,7 @@
   {{burger_name}}
 
   <button class = "change-devour" data-id = "{{id}}" data-newdevour = "{{devour}}">
-    {{#if false}}
+    {{#if devoured:false}}
       Devour it
       {{else}}
       Reorder
