--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,9 +4,9 @@
     <!-- jQuery -->
    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
    <script src="https://code.jquery.com/jquery.js"></script>
-   <script src="/js/burgers.js"></script>
+   <script src="js/burgers.js"></script>
    <!-- CSS -->
-   <link rel = "stylesheet" type = "text/css" href = "assets/css/burger_style.css">
+   <link rel = "stylesheet" type = "css" href = "assets/css/burger_style.css">
   </head>
   <body>
     <div class = "container">
