--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
    <script src="https://code.jquery.com/jquery.js"></script>
    <script src="js/burgers.js"></script>
    <!-- CSS -->
-   <link rel = "stylesheet" type = "css" href = "assets/css/style.css">
+   <link rel = "stylesheet" type = "text/css" href = "assets/css/style.css">
   </head>
   <body>
     <div class = "container">
