--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,8 +3,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- jQuery -->
    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-   <script type = "text/javascript" src="https://code.jquery.com/jquery.js"></script>
-   <script src="js/burgers.js"></script>
+   <script src="https://code.jquery.com/jquery.js"></script>
+   <script  type = "text/javascript" src="js/burgers.js"></script>
    <!-- CSS -->
    <link rel = "stylesheet" type = "text/css" href = "assets/css/style.css">
   </head>
