--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,13 +8,17 @@
   </head>
   <body>
     <div class = "container">
+      <div class = "row" id = "msg">
+        <h1>Eat da Burger!! </h1>
+        <P>Devour the Burger you like! Favourite not in the list, no worries feel free to add your Favourite burger in the add burger section below. And we will get it for you!!</P>
+      </div>
       <div class = "row">
         <div class = "col-md-4"></div>
         <div class = "col-md-4">
-          <h1>Eat da Burger!! </h1>
-          <img src = "assets/img/Spicy-Masala-Veggie-Burgers.jpg" width = "200" height = 100 alt = "Burger Image">
+          <img src = "assets/img/Spicy-Masala-Veggie-Burgers.jpg" width = "200" height = 100 alt = "Burger Image" id = "image">
         </div>
         <div class = "col-md-4"></div>
+        
       </div>
 
       <!-- Burger content from index.handlebars -->
